--- a/.github/workflows/deploy-model-training-pipeline-classical.yml
+++ b/.github/workflows/deploy-model-training-pipeline-classical.yml
@@ -1,7 +1,12 @@
-name: deploy-model-training-pipeline
+name: training-pipeline-test
 
-on: 
-  workflow_dispatch:
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
   get-config:
@@ -29,7 +34,7 @@ jobs:
     with:
       resource_group: ${{ needs.get-config.outputs.resource_group }}
       workspace_name: ${{ needs.get-config.outputs.aml_workspace }}
-      name: used-cars-data
+      name: machine-failure-data
       data_file: mlops/azureml/train/data.yml
     secrets:
       creds: ${{secrets.AZURE_CREDENTIALS}}
