--- a/.github/workflows/deploy-model-training-pipeline-classical.yml
+++ b/.github/workflows/deploy-model-training-pipeline-classical.yml
@@ -1,4 +1,4 @@
-name: training-pipeline-test
+name: training-pipeline-test-trial
 
 on:
   push:
@@ -24,9 +24,9 @@ jobs:
         max_instances: 1
         cluster_tier: dedicated
         resource_group: ${{ needs.get-config.outputs.resource_group }}
-        workspace_name: ${{ needs.get-config.outputs.aml_workspace }}     
+        workspace_name: ${{ needs.get-config.outputs.aml_workspace }}
       secrets:
-          creds: ${{secrets.AZURE_CREDENTIALS}} 
+          creds: ${{secrets.AZURE_CREDENTIALS}}
         
   register-dataset:
     needs: get-config
@@ -44,7 +44,7 @@ jobs:
       uses: Azure/mlops-templates/.github/workflows/register-environment.yml@main
       with:
         resource_group: ${{ needs.get-config.outputs.resource_group }}
-        workspace_name: ${{ needs.get-config.outputs.aml_workspace }}     
+        workspace_name: ${{ needs.get-config.outputs.aml_workspace }}
         environment_file:  mlops/azureml/train/train-env.yml
         conda_file: data-science/environment/train-conda.yml
       secrets:
@@ -55,7 +55,7 @@ jobs:
       uses: Azure/mlops-templates/.github/workflows/run-pipeline.yml@main
       with:
         resource_group: ${{ needs.get-config.outputs.resource_group }}
-        workspace_name: ${{ needs.get-config.outputs.aml_workspace }}     
+        workspace_name: ${{ needs.get-config.outputs.aml_workspace }}
         parameters-file:  mlops/azureml/train/newpipeline.yml
         job-name: mlops-pipeline
       secrets:
