--- a/.github/workflows/main3.yml
+++ b/.github/workflows/main3.yml
@@ -3,32 +3,28 @@ name: deploy-model-training-pipeline
 on: 
   workflow_dispatch:
 
-jobs:
-  login:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Azure Login
-        uses: azure/login@v1
-        with:
-          creds: >
-            {
-              "clientId": "48887672-e485-421c-9e32-2c2bd3642616",
-              "clientSecret": "jfi8Q~nphjYag90lrNmjD_oEkUeVmP5nuOY2aaJT",
-              "subscriptionId": "6490c64b-602a-4887-b258-36064f4cb8d4",
-              "tenantId": "a2799098-ec71-4199-a883-6274017f5282",
-              "activeDirectoryEndpointUrl": "https://login.microsoftonline.com",
-              "resourceManagerEndpointUrl": "https://management.azure.com/",
-              "activeDirectoryGraphResourceId": "https://graph.windows.net/",
-              "sqlManagementEndpointUrl": "https://management.core.windows.net:8443/",
-              "galleryEndpointUrl": "https://gallery.azure.com/",
-              "managementEndpointUrl": "https://management.core.windows.net/"
-            }
+env:
+  CREDS: >
+    {
+      "clientId": "48887672-e485-421c-9e32-2c2bd3642616",
+      "clientSecret": "jfi8Q~nphjYag90lrNmjD_oEkUeVmP5nuOY2aaJT",
+      "subscriptionId": "6490c64b-602a-4887-b258-36064f4cb8d4",
+      "tenantId": "a2799098-ec71-4199-a883-6274017f5282",
+      "activeDirectoryEndpointUrl": "https://login.microsoftonline.com",
+      "resourceManagerEndpointUrl": "https://management.azure.com/",
+      "activeDirectoryGraphResourceId": "https://graph.windows.net/",
+      "sqlManagementEndpointUrl": "https://management.core.windows.net:8443/",
+      "galleryEndpointUrl": "https://gallery.azure.com/",
+      "managementEndpointUrl": "https://management.core.windows.net/"
+    }
 
+jobs:
   get-config:
-    needs: login
     uses: Azure/mlops-templates/.github/workflows/read-yaml.yml@main
     with:
       file_name: config-infra-prod.yml
+    secrets:
+      creds: ${{ env.CREDS }}
 
   create-compute:
     needs: get-config
@@ -41,7 +37,9 @@ jobs:
       cluster_tier: dedicated
       resource_group: ${{ needs.get-config.outputs.resource_group }}
       workspace_name: ${{ needs.get-config.outputs.aml_workspace }}
-
+    secrets:
+      creds: ${{ env.CREDS }}
+        
   register-dataset:
     needs: get-config
     uses: Azure/mlops-templates/.github/workflows/register-dataset.yml@main
@@ -50,7 +48,9 @@ jobs:
       workspace_name: ${{ needs.get-config.outputs.aml_workspace }}
       name: used-cars-data
       data_file: mlops/azureml/train/data.yml
-
+    secrets:
+      creds: ${{ env.CREDS }}
+  
   register-environment:
     needs: get-config
     uses: Azure/mlops-templates/.github/workflows/register-environment.yml@main
@@ -59,7 +59,9 @@ jobs:
       workspace_name: ${{ needs.get-config.outputs.aml_workspace }}
       environment_file: mlops/azureml/train/train-env.yml
       conda_file: data-science/environment/train-conda.yml
-
+    secrets:
+      creds: ${{ env.CREDS }}
+      
   run-pipeline:
     needs: [get-config, register-environment, create-compute, register-dataset]
     uses: Azure/mlops-templates/.github/workflows/run-pipeline.yml@main
@@ -68,3 +70,5 @@ jobs:
       workspace_name: ${{ needs.get-config.outputs.aml_workspace }}
       parameters-file: mlops/azureml/train/newpipeline.yml
       job-name: mlops-pipeline
+    secrets:
+      creds: ${{ env.CREDS }}
